--- a/index.html
+++ b/index.html
@@ -28,10 +28,19 @@
                     <header>
                       <img src="img/logo.png" alt="Super Social Logo" title=""></img>
                       <h1 class="title">Super Social</h1>
-                      <p class="description">Super Social is your personal assistent.<br /><br />
-                        Reminding you to stay in touch with your friends, family, business contacts and acquaintances.</p>
-                      <button class="button" href="#">Get the app</button>
-                      <!-- <img class="appstore" src="img/appstore_badge.svg"></img> -->
+                      <p class="tagline">Your personal assistent.</p>
+                      <p class="features">
+                        Reminding you to stay in touch with your friends, family, business contacts and acquaintances.
+                        <br /><br />Keep track of your conversations over weeks, months and years.
+                        <br /><br />Let your life be full of social moments and happiness.</p>
+                      <!-- <button class="button" href="#">Get the app</button> -->
+                      <a href="#"><img class="appstore" src="img/appstore_badge.svg"></img></a>
+                      <p class="button-copy">Free</p>
+
+                      <div class="links">
+                        <a href="#" class="presskit">Press Kit</a>
+                        <a href="#" class="presskit">Contact</a>
+                      </div>
                     </header>
 
                 </article>
