update title, description and appstore link.

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title></title>
-        <meta name="description" content="">
+        <title>Super Social - Stay in touch</title>
+        <meta name="description" content="Super Social. Your personal assistent. iOS APP to remind you to stay in touch with your friends, family, business contacts and acquaintances.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
@@ -34,12 +34,12 @@
                         <br /><br />Keep track of your conversations over weeks, months and years.
                         <br /><br />Let your life be full of social moments and happiness.</p>
                       <!-- <button class="button" href="#">Get the app</button> -->
-                      <a href="#"><img class="appstore" src="img/appstore_badge.svg"></img></a>
+                      <a href="https://itunes.apple.com/us/app/super-social/id1186696582?ls=1&mt=8"><img class="appstore" src="img/appstore_badge.svg"></img></a>
                       <p class="button-copy">Free</p>
 
                       <div class="links">
-                        <a href="#" class="presskit">Press Kit</a>
-                        <a href="#" class="presskit">Contact</a>
+                        <a href="#presskit on dropbox" class="presskit">Press Kit</a>
+                        <a href="#email" class="presskit">Contact</a>
                       </div>
                     </header>
 
@@ -54,7 +54,7 @@
 
         <div class="footer-container">
             <footer class="wrapper">
-                <a href="#">Find out how to improve your social life and become Super Social</a>
+                <a href="https://www.medium.com">Find out how to improve your social life and become Super Social</a>
             </footer>
         </div>
 
