--- a/acknowledgment.html
+++ b/acknowledgment.html
@@ -7,6 +7,16 @@
 </head>
 <body>
 <div class="acknowledgment">
+  <h1>With many thanks to</h1>
+  <ul>
+<li>Wouter Bron for app development, and interaction design,</li>
+<li>Jille Kuipers for project management and feedback,</li>
+<li>Yuanhao for her logo design,</li>
+<li>Libin for the visual design,</li>
+<li>Zhangyi for the illustrations,</li>
+<li>and Pieterbas Klaas for the first feedback.</li>
+</ul>
+
   <h1>Acknowledgment</h1>
   <p>Super Social is built with the following open-source libraries. </p>
   <ul>
@@ -15,79 +25,74 @@
       <a href="https://github.com/hyperoslo/Lightbox/blob/master/LICENSE.md">(License)</a>
     </li>
 
-    <li>RecurrencePicker
-      <a href="https://github.com/teambition/RecurrencePicker">(GitHub)</a>
-      <a href="https://github.com/teambition/RecurrencePicker">(License)</a>
-    </li>
-
     <li>Presentr
       <a href="https://github.com/IcaliaLabs/Presentr">(GitHub)</a>
-      <a href="https://github.com/IcaliaLabs/Presentr">(License)</a>
+      <a href="https://github.com/IcaliaLabs/Presentr/blob/master/LICENSE">(License)</a>
     </li>
 
     <li>SwiftMessages
       <a href="https://github.com/SwiftKickMobile/SwiftMessages">(GitHub)</a>
-      <a href="https://github.com/SwiftKickMobile/SwiftMessages">(License)</a>
+      <a href="https://github.com/SwiftKickMobile/SwiftMessages/blob/master/LICENSE.md">(License)</a>
     </li>
 
     <li>Popover
       <a href="https://github.com/corin8823/Popover">(GitHub)</a>
-      <a href="https://github.com/corin8823/Popover">(License)</a>
+      <a href="https://github.com/corin8823/Popover/blob/master/LICENSE">(License)</a>
     </li>
 
     <li>EmptyKit
       <a href="https://github.com/eilianlove/EmptyKit">(GitHub)</a>
-      <a href="https://github.com/eilianlove/EmptyKit">(License)</a>
+      <a href="https://github.com/eilianlove/EmptyKit/blob/master/LICENSE">(License)</a>
     </li>
 
     <li>Hue
       <a href="https://github.com/hyperoslo/Hue">(GitHub)</a>
-      <a href="https://github.com/hyperoslo/Hue">(License)</a>
+      <a href="https://github.com/hyperoslo/Hue/blob/master/LICENSE.md">(License)</a>
     </li>
 
     <li>SwipyCell
       <a href="https://github.com/moritzsternemann/SwipyCell">(GitHub)</a>
-      <a href="https://github.com/moritzsternemann/SwipyCell">(License)</a>
+      <a href="https://github.com/moritzsternemann/SwipyCell/blob/master/LICENSE">(License)</a>
     </li>
 
     <li>AudioBot
       <a href="https://github.com/nixzhu/AudioBot">(GitHub)</a>
-      <a href="https://github.com/nixzhu/AudioBot">(License)</a>
+      <a href="https://github.com/nixzhu/AudioBot/blob/master/LICENSE">(License)</a>
     </li>
 
     <li>SwifterSwift
       <a href="https://github.com/SwifterSwift/SwifterSwift">(GitHub)</a>
-      <a href="https://github.com/SwifterSwift/SwifterSwift">(License)</a>
+      <a href="https://github.com/SwifterSwift/SwifterSwift/blob/master/LICENSE">(License)</a>
     </li>
 
     <li>AERecord
       <a href="https://github.com/tadija/AERecord">(GitHub)</a>
-      <a href="https://github.com/tadija/AERecord">(License)</a>
+      <a href="https://github.com/tadija/AERecord/blob/master/LICENSE">(License)</a>
     </li>
 
     <li>RRuleSwift
       <a href="https://github.com/teambition/RRuleSwift">(GitHub)</a>
-      <a href="https://github.com/teambition/RRuleSwift">(License)</a>
+      <a href="https://github.com/teambition/RRuleSwift/blob/master/LICENSE.md">(License)</a>
     </li>
 
     <li>SideMenuController
       <a href="https://github.com/teodorpatras/SideMenuController">(GitHub)</a>
-      <a href="https://github.com/teodorpatras/SideMenuController">(License)</a>
+      <a href="https://github.com/teodorpatras/SideMenuController/blob/master/LICENSE">(License)</a>
     </li>
 
     <li>FontAwesome.swift
       <a href="https://github.com/thii/FontAwesome.swift">(GitHub)</a>
-      <a href="https://github.com/thii/FontAwesome.swift">(License)</a>
+      <a href="https://github.com/thii/FontAwesome.swift/blob/master/LICENSE">(License)</a>
     </li>
 
     <li>Eureka
       <a href="https://github.com/xmartlabs/Eureka">(GitHub)</a>
-      <a href="https://github.com/xmartlabs/Eureka">(License)</a>
+      <a href="https://github.com/xmartlabs/Eureka/blob/master/LICENSE">(License)</a>
     </li>
 
     <li>DKImagePickerController
       <a href="https://github.com/zhangao0086/DKImagePickerController">(GitHub)</a>
-      <a href="https://github.com/zhangao0086/DKImagePickerController">(License)</a>
+      <a href="https://github.com/zhangao0086/DKImagePickerController/blob/master/LICENSE">(License)</a>
     </li>
 
     <li>Some images Designed by Freepik
