--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>Super Social - Stay in touch</title>
-        <meta name="description" content="Super Social. Your personal assistent. iOS APP to remind you to stay in touch with your friends, family, business contacts and acquaintances.">
+        <meta name="description" content="Super Social. Your personal assistent. The iOS APP to remind you to stay in touch with your friends, family, business contacts and acquaintances.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
@@ -46,7 +46,11 @@
                 </article>
 
                 <aside>
-                    <img class="screenshot" src="img/Website-Screenshot.png" alt="screenshot" title="screenshot"></img>
+                  <img class="screenshot1" src="img/Website screenshot 2.png" alt="screenshot" title="screenshot"></img>
+                  <img class="screenshot2" src="img/Website screenshot 1.png" alt="screenshot" title="screenshot"></img>
+                  <img class="screenshot3" src="img/Website screenshot 3.png" alt="screenshot" title="screenshot"></img>
+
+
                 </aside>
 
             </div> <!-- #main -->
