Update logo and content

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>Super Social - Stay in touch</title>
-        <meta name="description" content="Super Social. Your personal assistent. The iOS APP to remind you to stay in touch with your friends, family, business contacts and acquaintances.">
+        <meta name="description" content="Super Social. Stay in touch. The iOS APP to help you to stay in touch with your friends, family, business contacts and acquaintances.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
@@ -26,12 +26,12 @@
 
                 <article>
                     <header>
-                      <img src="img/logo.png" alt="Super Social Logo" title=""></img>
+                      <img src="img/logo.svg" alt="Super Social Logo" title=""></img>
                       <h1 class="title">Super Social</h1>
-                      <p class="tagline">Your personal assistent.</p>
+                      <p class="tagline">Stay in touch</p>
                       <p class="features">
-                        Reminding you to stay in touch with your friends, family, business contacts and acquaintances.
-                        <br /><br />Keep track of your conversations over weeks, months and years.
+                        Helping you stay in touch with your friends, family, business contacts and acquaintances.
+                        <br /><br />Keep track of all your conversations over weeks, months and years.
                         <br /><br />Let your life be full of social moments and happiness.</p>
                       <!-- <button class="button" href="#">Get the app</button> -->
                       <a href="https://itunes.apple.com/us/app/super-social/id1186696582?ls=1&mt=8"><img class="appstore" src="img/appstore_badge.svg"></img></a>
