--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
                 </article>
 
                 <aside>
-                  <img class="screenshot1" src="img/Website screenshot 2.png" alt="screenshot" title="screenshot"></img>
-                  <img class="screenshot2" src="img/Website screenshot 1.png" alt="screenshot" title="screenshot"></img>
-                  <img class="screenshot3" src="img/Website screenshot 3.png" alt="screenshot" title="screenshot"></img>
+                  <img class="screenshot1" src="img/SuperSocialScreenshot2.png" alt="screenshot" title="screenshot"></img>
+                  <img class="screenshot2" src="img/SuperSocialScreenshot1.png" alt="screenshot" title="screenshot"></img>
+                  <img class="screenshot3" src="img/SuperSocialScreenshot3.png" alt="screenshot" title="screenshot"></img>
 
 
                 </aside>
@@ -63,6 +63,28 @@
         </div>
 
         <script src="js/main.js"></script>
+        <script type="application/ld+json">
+{
+  "@context": "http://schema.org",
+  "@type": "SoftwareApplication",
+  "name": "Super Social",
+  "operatingSystem": "IOS",
+  "downloadURL": "https://itunes.apple.com/us/app/super-social/id1186696582?ls=1&mt=8",
+  "featureList": "Helping you stay in touch with your friends, family, business contacts and acquaintances. Keep track of all your conversations over weeks, months and years. Let your life be full of social moments and happiness.",
+  "applicationCategory": "http://schema.org/MobileApplication",
+  "screenshot": "https://getsupersocial.com/img/Website%20screenshot%202.png",
+  "offers": {
+    "@type": "Offer",
+    "price": "0.00",
+    "priceCurrency": "USD"
+  },
+  "aggregateRating": {
+    "@type": "AggregateRating",
+    "ratingValue": "4.6",
+    "ratingCount": "0"
+  }
+}
+</script>
         <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
