Add press-kit and contact email

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
                       <p class="button-copy">Free</p>
 
                       <div class="links">
-                        <a href="#presskit on dropbox" class="presskit">Press Kit</a>
-                        <a href="#email" class="presskit">Contact</a>
+                        <a href="Super-Social-press-kit.zip" class="presskit">Press Kit</a>
+                        <a href="mailto:appsupersocial@gmail.com" class="presskit">Contact</a>
                       </div>
                     </header>
 
