--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
         <div class="footer-container">
             <footer class="wrapper">
-                <a href="https://medium.com/@getsupersocial">Find out how to improve your social life and become Super Social</a>
+                <a href="https://medium.com/@getsupersocial/latest">Find out how to improve your social life and become Super Social</a>
             </footer>
         </div>
 
