New screenshots, Name Change

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Super Social - Stay in touch</title>
-        <meta name="description" content="Super Social. Stay in touch. The iOS APP to help you to stay in touch with your friends, family, business contacts and acquaintances.">
+        <title>Social Contact Journal - Stay in touch</title>
+        <meta name="description" content="Social Contact Journal. Stay in touch. The iOS APP to help you to stay in touch with your friends, family, business contacts and acquaintances.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
@@ -26,8 +26,8 @@
 
                 <article>
                     <header>
-                      <img src="img/logo.svg" alt="Super Social Logo" title=""></img>
-                      <h1 class="title">Super Social</h1>
+                      <img src="img/logo.svg" alt="Social Contact Journal Logo" title=""></img>
+                      <h1 class="title">Social Contact Journal</h1>
                       <p class="tagline">Stay in touch</p>
                       <p class="features">
                         Helping you stay in touch with your friends, family, business contacts and acquaintances.
@@ -38,7 +38,7 @@
                       <p class="button-copy">Free</p>
 
                       <div class="links">
-                        <a href="Super-Social-press-kit.zip" class="presskit">Press Kit</a>
+                        <a href="press-kit.zip" class="presskit">Press Kit</a>
                         <a href="mailto:appsupersocial@gmail.com" class="presskit">Contact</a>
                       </div>
                     </header>
@@ -56,18 +56,12 @@
             </div> <!-- #main -->
         </div> <!-- #main-container -->
 
-        <div class="footer-container">
-            <footer class="wrapper">
-                <a href="https://medium.com/@getsupersocial/latest">Find out how to improve your social life and become Super Social</a>
-            </footer>
-        </div>
-
         <script src="js/main.js"></script>
         <script type="application/ld+json">
 {
   "@context": "http://schema.org",
   "@type": "SoftwareApplication",
-  "name": "Super Social",
+  "name": "Social Contact Journal",
   "operatingSystem": "IOS",
   "downloadURL": "https://itunes.apple.com/us/app/super-social/id1186696582?ls=1&mt=8",
   "featureList": "Helping you stay in touch with your friends, family, business contacts and acquaintances. Keep track of all your conversations over weeks, months and years. Let your life be full of social moments and happiness.",
