Update screenshots for 1.5.0

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
                 <article>
                     <header>
-                      <img src="img/logo.svg" alt="Social Contact Journal Logo" title=""></img>
+                      <img id="logo" src="img/logo.svg" alt="Social Contact Journal Logo" title="logo"></img>
                       <h1 class="title">Social Contact Journal</h1>
                       <p class="tagline">Stay in touch</p>
                       <p class="features">
@@ -39,16 +39,16 @@
 
                       <div class="links">
                         <a href="press-kit.zip" class="presskit">Press Kit</a>
-                        <a href="mailto:appsupersocial@gmail.com" class="presskit">Contact</a>
+                        <a href="mailto:support@goodmorninglabs.com" class="presskit">Contact</a>
                       </div>
                     </header>
 
                 </article>
 
                 <aside>
-                  <img class="screenshot1" src="img/SuperSocialScreenshot2.png" alt="screenshot" title="screenshot"></img>
-                  <img class="screenshot2" src="img/SuperSocialScreenshot1.png" alt="screenshot" title="screenshot"></img>
-                  <img class="screenshot3" src="img/SuperSocialScreenshot3.png" alt="screenshot" title="screenshot"></img>
+                  <img class="screenshot1" src="img/small/screenshot_today_screen.png" alt="screenshot" title="screenshot"></img>
+                  <img class="screenshot2" src="img/small/screenshot_detail1_screen.png" alt="screenshot" title="screenshot"></img>
+                  <img class="screenshot3" src="img/small/screenshot_detail2_screen.png" alt="screenshot" title="screenshot"></img>
 
 
                 </aside>
