Update of 6 March

--- a/index.html
+++ b/index.html
@@ -2,92 +2,220 @@
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang=""> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang=""> <!--<![endif]-->
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Social Contact Journal - Stay in touch</title>
-        <meta name="description" content="Social Contact Journal. Stay in touch. The iOS APP to help you to stay in touch with your friends, family, business contacts and acquaintances.">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="apple-touch-icon" href="apple-touch-icon.png">
+<!--[if gt IE 8]><!-->
+<html class="no-js" lang="">
+<!--<![endif]-->
 
-        <link rel="stylesheet" href="css/normalize.min.css">
-        <link rel="stylesheet" href="css/main.css">
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <title>Social Contact Journal - Stay in touch</title>
+  <meta name="description" content="Social Contact Journal. Stay in touch. The iOS app that helps you to stay in touch with your friends, family, business contacts and acquaintances.">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
-        <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
-    </head>
-    <body>
-        <!--[if lt IE 8]>
+  <link rel="stylesheet" href="css/normalize.min.css">
+  <link rel="stylesheet" href="css/main.css">
+  <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,500" rel="stylesheet">
+
+  <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+</head>
+
+<body>
+  <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
+  <!-- Header -->
+  <!-- <div id="header">
+    <div class="menu">
+      <a href="#features" title="Features">Features</a>
+      <a href="#faq" title="FAQ">FAQ</a>
+      <a href="#support" title="Support">Support</a>
+    </div>
+  </div> -->
+  <!-- /Header -->
 
-        <div class="main-container">
-            <div class="main wrapper clearfix">
+  <!-- Add your site or application content here -->
+  <div id="hero" class="fullpage hero">
+    <div class="content">
+        <div class="left">
+          <img id="logo" src="img/logo.svg" alt="Social Contact Journal Logo" title="logo"></img>
+          <h1>Improve your personal network day by day</h1>
+          <!-- <h1>See your personal network improve day by day</h1> -->
+          <p class="herotext">Whether you're staying in touch with family, clients, co-workers or friends, Contact Journal's features help you to stay on top of it all.</p>
+          <!-- <p>Keep a personal timeline of all your interactions, keep track of your whole social circle, and be reminded to reach out proactively.</p> -->
+          <!-- <p>Download now.</p> -->
+          <div class="download">
+            <div class="appstore button">
+              <a href="https://itunes.apple.com/us/app/super-social/id1186696582?ls=1&mt=8"><img class="appstore" src="img/appstore_badge.svg"></img></a>
+            </div>
+            <div class="qrcode">
+              <img class="appstoreqr" src="img/appstore_qr.svg" width="80" height="80"></img>
+            </div>
+            <div class="tip">
+              <p class="speech-bubble shadow">Point your phone's camera here to try it out!</p>
+            </div>
+          </div>
+        </div>
+        <div class="right">
+            <img class="screenshot" src="img/screenshots/today.png" alt="Screenshot of Contact Journal's Today screen" title="Screenshot of Contact Journal's Today screen"></img>
+        </div>
+    </div>
+  </div>
 
-                <article>
-                    <header>
-                      <img id="logo" src="img/logo.svg" alt="Social Contact Journal Logo" title="logo"></img>
-                      <h1 class="title">Social Contact Journal</h1>
-                      <p class="tagline">Stay in touch</p>
-                      <p class="features">
-                        Helping you stay in touch with your friends, family, business contacts and acquaintances.
-                        <br /><br />Keep track of all your conversations over weeks, months and years.
-                        <br /><br />Let your life be full of social moments and happiness.</p>
-                      <!-- <button class="button" href="#">Get the app</button> -->
-                      <a href="https://itunes.apple.com/us/app/super-social/id1186696582?ls=1&mt=8"><img class="appstore" src="img/appstore_badge.svg"></img></a>
-                      <p class="button-copy">Free</p>
+  <div id="shortreference" class="shortreference">
+      <div class="referencecontent">
+        <h2>Loved by teams, professionals and individuals</h2>
+        <div class="referencecards">
+          <div class="referencecard">
+            <p class="referencequote">
+                “Ive been looking for an app like this forever! It is fantastic!”
+            </p>
+            <p class="referencecustomer">
+              - Rogy
+          </p>
+          </div>
 
-                      <div class="links">
-                        <a href="press-kit.zip" class="presskit">Press Kit</a>
-                        <a href="mailto:support@goodmorninglabs.com" class="presskit">Contact</a>
-                      </div>
-                    </header>
+          <div class="referencecard">
+              <p class="referencequote">
+                  “I really like your app and it appears to be the only one of its kind I can find”
+              </p>
+              <p class="referencecustomer">
+                - Han
+            </p>
+            </div>
 
-                </article>
+            <div class="referencecard">
+                <p class="referencequote">
+                    “I really love your app :D”
+                </p>
+                <p class="referencecustomer">
+                  - Florian
+              </p>
+              </div>
+        </div>
+        </div>
+    </div>
 
-                <aside>
-                  <img class="screenshot1" src="img/small/screenshot_today_screen.png" alt="screenshot" title="screenshot"></img>
-                  <img class="screenshot2" src="img/small/screenshot_detail1_screen.png" alt="screenshot" title="screenshot"></img>
-                  <img class="screenshot3" src="img/small/screenshot_detail2_screen.png" alt="screenshot" title="screenshot"></img>
+    <!-- Feature 1-->
+    <div class="fullpage feature">
+        <div class="content">
+            <div class="left">
+              <img class="screenshot feature" src="img/screenshots/contacts.png" alt="Screenshot of Contact Journal's Contacts screen" title="Screenshot of Contact Journal's Contacts screen"></img>
+            </div>
+            <div class="right">
+              <div class="featurediscription">
+                <h1 class="feature">Reach out proactively</h1>
+                <p>Just in time contact reminders. Never forget birthdays, important dates, local holidays or follow-ups.</p>
+            </div>
+        </div>
+        </div>
+      </div>
+      <!-- /Feature 1-->
 
+      <!-- Feature 2-->
+    <div class="fullpage feature">
+        <div class="content">
+            <div class="left">
+              <div class="featurediscription">
+                  <h1 class="feature">A personal timeline</h1>
+                  <p>Never forget your past interactions, relive your past conversations.</p>
+              </div>
+            </div>
+            <div class="right">
+              <img class="screenshot feature" src="img/screenshots/moments.png" alt="Screenshot of Contact Journal's Moments screen" title="Screenshot of Contact Journal's Moments screen"></img>
+        </div>
+        </div>
+      </div>
+      <!-- /Feature 2-->
 
-                </aside>
+      <!-- Feature 3-->
+    <div class="fullpage feature">
+        <div class="content">
+          <div class="left">
+            <img class="screenshot feature" src="img/screenshots/details.png" alt="Screenshot of Contact Journal's Details screen" title="Screenshot of Contact Journal's Details screen"></img>
+          </div>
+          <div class="right">
+            <div class="featurediscription">
+              <h1 class="feature">The little details</h1>
+              <p>The names of their children, birthdays, anniversaries or their favorite food.</p>
+              <p>Contact Journal lets you remember everything you need to know about your contacts.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- /Feature 3-->
 
-            </div> <!-- #main -->
-        </div> <!-- #main-container -->
+      <!-- Feature 4-->
+    <!-- <div class="fullpage feature">
+      <div class="content">
+          <div class="left">
+              <div class="featurediscription">
+                  <h1 class="feature">Suggested messages</h1>
+                  <p>Looking for words? It happens to the best of us. Let Contact Journal help you with message suggestions.</p>
+          </div>
+          </div>
+          <div class="right">
+              <img class="screenshot feature" src="" alt="feature" title="feature"></img>
+      </div>
+      </div>
+    </div> -->
+    <!-- /Feature 4-->
 
-        <script src="js/main.js"></script>
-        <script type="application/ld+json">
-{
-  "@context": "http://schema.org",
-  "@type": "SoftwareApplication",
-  "name": "Social Contact Journal",
-  "operatingSystem": "IOS",
-  "downloadURL": "https://itunes.apple.com/us/app/super-social/id1186696582?ls=1&mt=8",
-  "featureList": "Helping you stay in touch with your friends, family, business contacts and acquaintances. Keep track of all your conversations over weeks, months and years. Let your life be full of social moments and happiness.",
-  "applicationCategory": "http://schema.org/MobileApplication",
-  "screenshot": "https://getsupersocial.com/img/Website%20screenshot%202.png",
-  "offers": {
-    "@type": "Offer",
-    "price": "0.00",
-    "priceCurrency": "USD"
-  },
-  "aggregateRating": {
-    "@type": "AggregateRating",
-    "ratingValue": "4.6",
-    "ratingCount": "0"
-  }
-}
-</script>
-        <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+    <!-- Feature 5-->
+    <!-- <div class="fullpage feature">
+      <div class="content">
+          <div class="left">
+              <img class="screenshot feature" src="" alt="feature" title="feature"></img>
+          </div>
+          <div class="right">
+              <div class="featurediscription">
+                  <h1 class="feature">Safe and secure</h1>
+                  <p>Your data is yours and is on iCloud sync. All your data is safe and secure.</p>
+          </div>
+      </div>
+      </div>
+    </div> -->
+    <!-- /Feature 5-->
 
-  ga('create', 'UA-43477833-2', 'auto');
-  ga('send', 'pageview');
+  <script type="application/ld+json">
+    {
+      "@context": "http://schema.org",
+      "@type": "SoftwareApplication",
+      "name": "Social Contact Journal",
+      "operatingSystem": "IOS",
+      "downloadURL": "https://itunes.apple.com/us/app/super-social/id1186696582?ls=1&mt=8",
+      "featureList": "Helping you stay in touch with your friends, family, business contacts and acquaintances. Keep track of all your conversations over weeks, months and years. Let your life be full of social moments and happiness.",
+      "applicationCategory": "http://schema.org/MobileApplication",
+      "screenshot": "https://getsupersocial.com/img/Website%20screenshot%202.png",
+      "offers": {
+        "@type": "Offer",
+        "price": "0.00",
+        "priceCurrency": "USD"
+      },
+      "aggregateRating": {
+        "@type": "AggregateRating",
+        "ratingValue": "4.6",
+        "ratingCount": "0"
+      }
+    }
+  </script>
+  <script>
+    (function (i, s, o, g, r, a, m) {
+      i['GoogleAnalyticsObject'] = r;
+      i[r] = i[r] || function () {
+        (i[r].q = i[r].q || []).push(arguments)
+      }, i[r].l = 1 * new Date();
+      a = s.createElement(o),
+        m = s.getElementsByTagName(o)[0];
+      a.async = 1;
+      a.src = g;
+      m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
-</script>
-    </body>
+    ga('create', 'UA-43477833-2', 'auto');
+    ga('send', 'pageview');
+  </script>
+</body>
+
 </html>
