--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="referencecards">
           <div class="referencecard">
             <p class="referencequote">
-                “Ive been looking for an app like this forever! It is fantastic!”
+                “I've been looking for an app like this forever! It is fantastic!”
             </p>
             <p class="referencecustomer">
               - Rogy
