--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           </div>
         </div>
         <div class="right">
-            <img class="screenshot" src="img/screenshots/today.png" alt="Screenshot of Contact Journal's Today screen" title="Screenshot of Contact Journal's Today screen"></img>
+            <img class="screenshot" src="img/screenshots/today.png" srcset="img/screenshots/today@2x.png 2x" alt="Screenshot of Contact Journal's Today screen" title="Screenshot of Contact Journal's Today screen"></img>
         </div>
     </div>
   </div>
@@ -101,7 +101,7 @@
     <div class="fullpage feature">
         <div class="content">
             <div class="left">
-              <img class="screenshot feature" src="img/screenshots/contacts.png" alt="Screenshot of Contact Journal's Contacts screen" title="Screenshot of Contact Journal's Contacts screen"></img>
+              <img class="screenshot feature" src="img/screenshots/contacts.png" srcset="img/screenshots/contacts@2x.png 2x" alt="Screenshot of Contact Journal's Contacts screen" title="Screenshot of Contact Journal's Contacts screen"></img>
             </div>
             <div class="right">
               <div class="featurediscription">
@@ -119,7 +119,7 @@
             <div class="left">
               <div class="featurediscription">
                   <h1 class="feature">A personal timeline</h1>
-                  <p>Never forget your past interactions, relive your past conversations.</p>
+                  <p>Never forget your past interactions, relive your conversations.</p>
               </div>
             </div>
             <div class="right">
@@ -139,7 +139,7 @@
             <div class="featurediscription">
               <h1 class="feature">The little details</h1>
               <p>The names of their children, birthdays, anniversaries or their favorite food.</p>
-              <p>Contact Journal lets you remember everything you need to know about your contacts.</p>
+              <p>Remember everything you need to know about your contacts.</p>
             </div>
           </div>
         </div>
