--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <img id="logo" src="img/logo.svg" alt="Social Contact Journal Logo" title="logo"></img>
           <h1>Improve your personal network day by day</h1>
           <!-- <h1>See your personal network improve day by day</h1> -->
-          <p class="herotext">Whether you're staying in touch with family, clients, co-workers or friends, Contact Journal's features help you to stay on top of it all.</p>
+          <p class="herotext">Whether you're staying in touch with family, clients, co-workers or friends, Contact Journal helps you stay on top of it all.</p>
           <!-- <p>Keep a personal timeline of all your interactions, keep track of your whole social circle, and be reminded to reach out proactively.</p> -->
           <!-- <p>Download now.</p> -->
           <div class="download">
@@ -123,7 +123,7 @@
               </div>
             </div>
             <div class="right">
-              <img class="screenshot feature" src="img/screenshots/moments.png" alt="Screenshot of Contact Journal's Moments screen" title="Screenshot of Contact Journal's Moments screen"></img>
+              <img class="screenshot feature" src="img/screenshots/moments.png" srcset="img/screenshots/moments@2x.png 2x" alt="Screenshot of Contact Journal's Moments screen" title="Screenshot of Contact Journal's Moments screen"></img>
         </div>
         </div>
       </div>
@@ -133,7 +133,7 @@
     <div class="fullpage feature">
         <div class="content">
           <div class="left">
-            <img class="screenshot feature" src="img/screenshots/details.png" alt="Screenshot of Contact Journal's Details screen" title="Screenshot of Contact Journal's Details screen"></img>
+            <img class="screenshot feature" src="img/screenshots/details.png" srcset="img/screenshots/details@2x.png 2x" alt="Screenshot of Contact Journal's Details screen" title="Screenshot of Contact Journal's Details screen"></img>
           </div>
           <div class="right">
             <div class="featurediscription">
