--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <div class="content">
             <div class="left">
               <div class="featurediscription">
-                  <h1 class="feature">A personal timeline</h1>
+                  <h1 class="feature">Personal timelines</h1>
                   <p>Never forget your past interactions, relive your conversations.</p>
               </div>
             </div>
