--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <img id="logo" src="img/logo.svg" alt="Social Contact Journal Logo" title="logo"></img>
           <h1>Improve your personal network day by day with Contact Journal</h1>
           <!-- <h1>See your personal network improve day by day</h1> -->
-          <p class="herotext">Contact Journal is an intelligent CRM assistant on your phone that helps you stay in touch with family, clients, co-workers or friends.</p>
+          <p class="herotext">Contact Journal is an intelligent personal CRM on your phone that helps you stay in touch with family, clients, co-workers and friends.</p>
           <!-- <p>Keep a personal timeline of all your interactions, keep track of your whole social circle, and be reminded to reach out proactively.</p> -->
           <!-- <p>Download now.</p> -->
           <div class="download">
