Add star ratings

--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@
               <p class="speech-bubble shadow">Point your phone's camera here to try it out!</p>
             </div>
           </div>
+          <div class="ratings">
+              <img class="stars" src="img/stars.png" alt="Star rating of Contact Journal" title="Star rating of Contact Journal"></img>
+            <p class="ratings">4.0, 6 Ratings</p>
+          </div>
         </div>
         <div class="right">
             <img class="screenshot" src="img/screenshots/today.png" srcset="img/screenshots/today@2x.png 2x" alt="Screenshot of Contact Journal's Today screen" title="Screenshot of Contact Journal's Today screen"></img>
