--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/disclosure-faq.css">
   <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,500" rel="stylesheet">
-
   <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
 </head>
 
@@ -300,6 +299,8 @@
         </div>
     </div>
     <!-- /Give it a try-->
+
+    <script type="text/javascript" src="//downloads.mailchimp.com/js/signup-forms/popup/unique-methods/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script><script type="text/javascript">window.dojoRequire(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us3.list-manage.com","uuid":"c469820e7f526cc1cefb0630f","lid":"e132f9daa7","uniqueMethods":true}) })</script>
 
   <script type="application/ld+json">
     {
