--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
           <a href="#features" title="Features">Features</a>
           <a href="#faq" title="FAQ">FAQ</a>
           <a href="#support" title="Support">Support</a>
+          <a href="https://medium.com/@SocialContactJournal" rel="external" target="_blank" title="Blog">Blog</a>
         </div>
         <div class="producthunt">
     
