Css update, schema update

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 	<link rel="apple-touch-icon" href="apple-touch-icon.png">
 	<link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,500" rel="stylesheet">
 	<script async="" src="https://www.google-analytics.com/analytics.js"></script>
-	<link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
 	<link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
 <style type="text/css">
 	#mc_embed_signup{clear:left; font:14px Helvetica,Arial,sans-serif; }
@@ -292,9 +291,9 @@
       "name": "Social Contact Journal",
       "operatingSystem": "IOS",
       "downloadURL": "https://itunes.apple.com/us/app/super-social/id1186696582?ls=1&mt=8",
-      "featureList": "Social Contact Journal. Personal CRM with reminders. Contact Journal is an intelligent CRM assistant on your phone that helps you stay in touch with family, clients, co-workers or friends.",
+      "featureList": "Personal CRM with reminders. Contact Journal is an intelligent CRM assistant on your phone that helps you stay in touch with family, clients, co-workers or friends.",
       "applicationCategory": "http://schema.org/MobileApplication",
-      "screenshot": "https://getsupersocial.com/img/Website%20screenshot%202.png",
+      "screenshot": "https://socialcontactjournal.com/images/screenshots/today-iphone@2x.png",
       "offers": {
         "@type": "Offer",
         "price": "0.00",
@@ -303,7 +302,7 @@
       "aggregateRating": {
         "@type": "AggregateRating",
         "ratingValue": "4.6",
-        "ratingCount": "0"
+        "ratingCount": "6"
       }
     }
   </script>
