--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 <html lang='en'>
 <head>
 	<meta class="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5">
 	<title>Social Contact Journal - Personal CRM with reminders</title>
 	<meta name="description" content="Social Contact Journal. Personal CRM with reminders. Contact Journal is an intelligent CRM assistant on your phone that helps you stay in touch with family, clients, co-workers or friends.">
 	<!-- Don't forget to add your metadata here -->
 	<link rel='stylesheet' href='css/style.css' />
 	<link rel="apple-touch-icon" href="apple-touch-icon.png">
-	<link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,500" rel="stylesheet">
 	<script async="" src="https://www.google-analytics.com/analytics.js"></script>
 	<link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
 <style type="text/css">
@@ -54,12 +53,12 @@
 						<p class="hero__text">Contact Journal is an intelligent personal CRM on your phone that helps you stay in touch with family, clients, co-workers, and friends.</p>
 						<div class="download flex__container flex__align_middle">
 						<div class="appstore flex__download__button">
-							<a href="https://apps.apple.com/app/apple-store/id1186696582?pt=118510345&ct=b&mt=8"><img class="appstore" src="images/download/appstore_badge.svg"></img></a>
+							<a href="https://apps.apple.com/app/apple-store/id1186696582?pt=118510345&ct=b&mt=8" aria-label="Download Social Contact Journal from the AppStore"><img class="appstore" src="images/download/appstore_badge.svg" alt="Download on the AppStore"></img></a>
 						  </div>
 
 						  <div class="flex__download__qr">
 						  <!--<div class="qrcode"></div>-->
-							<img class="appstoreqr" src="images/download/appstore_qr.svg" width="80" height="80"></img>
+							<img class="appstoreqr" src="images/download/appstore_qr.svg" width="80" height="80" alt="scan QR code to open AppStore"></img>
 						  
 						  <div class="tip">
 							<p class="speech-bubble shadow">Point your phone's camera here to try it out!</p>
@@ -215,7 +214,7 @@
 				<h2 class="cta__title">Ready to try?</h2>
 				<p class="cta__sub cta__sub--center">Download it now and start improving your personal network!</p>
 				<div class="appstore-bottom">
-						<a href="https://apps.apple.com/app/apple-store/id1186696582?pt=118510345&ct=b&mt=8"><img class="appstore" src="images/download/appstore_badge.svg"></img></a>
+						<a href="https://apps.apple.com/app/apple-store/id1186696582?pt=118510345&ct=b&mt=8" aria-label="Download Social Contact Journal from the AppStore"><img class="appstore" src="images/download/appstore_badge.svg" alt="Download on the AppStore"></img></a>
 					  </div>
 			</div>
 			<div class="cta__inner">
@@ -232,7 +231,7 @@
 <form action="https://socialcontactjournal.us3.list-manage.com/subscribe/post?u=c469820e7f526cc1cefb0630f&amp;id=e132f9daa7" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
 	
-	<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+	<input type="email" value="" name="EMAIL" class="email" aria-label="email address" id="mce-EMAIL" placeholder="email address" required>
     <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
     <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_c469820e7f526cc1cefb0630f_e132f9daa7" tabindex="-1" value=""></div>
     <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button button__accent"></div>
@@ -254,10 +253,10 @@
 				<div class="footer__data">
 					<div class="footer__data__item">
 						<div class="footer__row">
-							Created by <a href="https://goodmorninglabs.com/" target="_blank" class="footer__link">Good Morning Labs</a>
+							Created by <a href="https://goodmorninglabs.com/" target="_blank" class="footer__link" rel="noreferrer">Good Morning Labs</a>
 						</div>
 						<div class="footer__row">
-							 Supported by <a href="https://ycombinator.com/" target="_blank" class="footer__link">Y Combinator Startup School</a>
+							 Supported by <a href="https://ycombinator.com/" target="_blank" class="footer__link" rel="noreferrer">Y Combinator Startup School</a>
 						</div>
 					</div>
 					<div class="footer__data__item">
@@ -271,10 +270,10 @@
 						<a href="https://twitter.com/SContactJournal" target="_blank" class="footer__link">Twitter</a>
 					</div>
 					<div class="footer__row">
-						<a href="https://socialcontactjournal.com/privacy/" target="_blank" class="footer__link">Privacy Policy</a>
+						<a href="/privacy/" target="_blank" class="footer__link">Privacy Policy</a>
 					</div>
 					<div class="footer__row">
-						<a href="https://socialcontactjournal.com/terms/" class="footer__link">Terms of Service</a>
+						<a href="/terms/" target="_blank" class="footer__link">Terms of Service</a>
 					</div>
 				</div>
 			</div>
