--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
 						<a href="#" target="_blank" class="footer__link">Press-kit</a>
 					</div>
 					<div class="footer__row">
-						<a href="https://twitter.com/SContactJournal" target="_blank" class="footer__link">Twitter</a>
+						<a href="https://twitter.com/SContactJournal" target="_blank" class="footer__link" rel="noreferrer">Twitter</a>
 					</div>
 					<div class="footer__row">
 						<a href="/privacy/" target="_blank" class="footer__link">Privacy Policy</a>
@@ -279,7 +279,7 @@
 			</div>
 		</div>
 	</div>
-<script src='js/app.min.js'></script>
+<!--<script src='js/app.min.js'></script>-->
 <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript"></script>
 <script type="text/javascript" src="//downloads.mailchimp.com/js/signup-forms/popup/unique-methods/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script><script type="text/javascript">window.dojoRequire(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us3.list-manage.com","uuid":"c469820e7f526cc1cefb0630f","lid":"e132f9daa7","uniqueMethods":true}) })</script>
 
